samples/_failures_safe/1761442016_dcc683_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a47e59bd.c: In function ‘main’:
./samples/SAFE/__tmp_a47e59bd.c:181:5: error: expected declaration or statement at end of input
  181 |     }
      |     ^
